[tool.poetry]
name = "notify"
version = "0.1.0"
description = ""
authors = ["youngwishes <d.fedorov@ylab.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
aiokafka = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
